--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>SynaptixLibs</artifactId>
-		<version>4.2.6-SNAPSHOT</version>
+		<version>4.2.7-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>dev</artifactId>
@@ -178,11 +178,17 @@
 			<artifactId>guice-grapher</artifactId>
 			<version>3.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.9</version>
 		</dependency>
 	</dependencies>
 </project>
