--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.synaptix</groupId>
 	<artifactId>SynaptixLibs</artifactId>
-	<version>4.2.6-SNAPSHOT</version>
+	<version>4.2.7-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<organization>
 		<name>Synaptix-Labs</name>
@@ -24,6 +24,7 @@
 		<maven-war-plugin.version>2.2</maven-war-plugin.version>
 		<maven-eclipse-plugin.version>2.8</maven-eclipse-plugin.version>
 		<maven-release-plugin.version>2.2.2</maven-release-plugin.version>
+		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
 		<build-helper-maven-plugin>1.7</build-helper-maven-plugin>
 		<maven-processor-plugin.version>2.2.1</maven-processor-plugin.version>
 		<lifecycle-mapping-plugin.version>1.0.0</lifecycle-mapping-plugin.version>
@@ -126,6 +127,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<configuration>
+					<deployAtEnd>true</deployAtEnd>
+				</configuration>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -138,6 +146,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>${maven-release-plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>${maven-deploy-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -264,7 +277,7 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-			<url>http://project.synaptix-labs.com/nexus/content/repositories/releases/</url>
+			<url>https://nexus.synaptix-labs.com/content/groups/public_release</url>
 		</repository>
 		<repository>
 			<id>synaptix-snapshots-repository</id>
@@ -274,7 +287,7 @@
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
-			<url>http://project.synaptix-labs.com/nexus/content/repositories/snapshots/</url>
+			<url>https://nexus.synaptix-labs.com/content/groups/public_snapshots</url>
 		</repository>
 		<repository>
 			<id>java.net-Public</id>
@@ -766,11 +779,11 @@
 	<distributionManagement>
 		<repository>
 			<id>synaptix-releases-repository</id>
-			<url>http://maven.synaptix-labs.com:8081/nexus/content/repositories/releases/</url>
+			<url>https://nexus.synaptix-labs.com/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>synaptix-snapshots-repository</id>
-			<url>http://maven.synaptix-labs.com:8081/nexus/content/repositories/snapshots/</url>
+			<url>https://nexus.synaptix-labs.com/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
