--- a/client/SynaptixMapViewer/pom.xml
+++ b/client/SynaptixMapViewer/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>client</artifactId>
 		<groupId>com.synaptix</groupId>
-		<version>4.2.9-SNAPSHOT</version>
+		<version>4.2.9</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>SynaptixMapViewer</artifactId>
