--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>SynaptixLibs</artifactId>
-		<version>4.2.9-SNAPSHOT</version>
+		<version>4.2.9</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>client</artifactId>
