--- a/gwt/SynaptixGWTShared/pom.xml
+++ b/gwt/SynaptixGWTShared/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>gwt</artifactId>
-		<version>4.2.9-SNAPSHOT</version>
+		<version>4.2.9</version>
 	</parent>
 	<artifactId>SynaptixGWTShared</artifactId>
 	<name>Synaptix - GWT - Shared</name>
