--- a/processManager/SynaptixProcessManagerApi/pom.xml
+++ b/processManager/SynaptixProcessManagerApi/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.synaptix</groupId>
     <artifactId>processManager</artifactId>
-    <version>4.2.9-SNAPSHOT</version>
+    <version>4.2.9</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>SynaptixProcessManagerApi</artifactId>
