--- a/SynaptixParent/pom.xml
+++ b/SynaptixParent/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>SynaptixLibs</artifactId>
-		<version>4.2.9</version>
+		<version>4.2.10-SNAPSHOT</version>
 	</parent>
 	<artifactId>SynaptixParent</artifactId>
 	<packaging>pom</packaging>
@@ -13,156 +13,156 @@
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixClientView</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixSwing</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixMapViewer</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixGeoTools</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixService</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixClientService</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixSmackxService</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixAbonnement</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixSmackxAbonnement</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixServerService</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixExtensionService</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixSender</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixServerAbonnement</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixScenarioService</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixGWT</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixComponent</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixAuth</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixConstants</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixClassModel</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixServer</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixEntity</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixMyBatis</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixWidget</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixCommon</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixDownloader</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.synaptix</groupId>
 				<artifactId>SynaptixGuice</artifactId>
-				<version>4.2.9</version>
+				<version>4.2.10-SNAPSHOT</version>
 				<scope>compile</scope>
 			</dependency>
 			
