--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.synaptix</groupId>
 	<artifactId>SynaptixLibs</artifactId>
-	<version>4.2.9</version>
+	<version>4.2.10-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<organization>
 		<name>Synaptix-Labs</name>
