--- a/server/SynaptixSender/pom.xml
+++ b/server/SynaptixSender/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>server</artifactId>
-		<version>4.2.9</version>
+		<version>4.2.10-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>SynaptixSender</artifactId>
