--- a/processManager/SynaptixToolkit/pom.xml
+++ b/processManager/SynaptixToolkit/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>processManager</artifactId>
-		<version>4.2.10-SNAPSHOT</version>
+		<version>4.2.10</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>SynaptixToolkit</artifactId>
