--- a/processManager/SynaptixTriggerManager/pom.xml
+++ b/processManager/SynaptixTriggerManager/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.synaptix</groupId>
     <artifactId>processManager</artifactId>
-    <version>4.2.10-SNAPSHOT</version>
+    <version>4.2.10</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>SynaptixTriggerManager</artifactId>
