--- a/shared/SynaptixGeoTools/pom.xml
+++ b/shared/SynaptixGeoTools/pom.xml
@@ -3,7 +3,7 @@
 	 <parent>
     <groupId>com.synaptix</groupId>
     <artifactId>shared</artifactId>
-    <version>4.2.10</version>
+    <version>4.2.11-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 	<artifactId>SynaptixGeoTools</artifactId>
