Correctif pour JListToList et modification de la DialogVisibilityColumns

--- a/client/SynaptixSwing/src/main/resources/com/synaptix/swing/swingMessages.properties
+++ b/client/SynaptixSwing/src/main/resources/com/synaptix/swing/swingMessages.properties
@@ -55,6 +55,7 @@ DialogErrorMessage.31=Envoyer par courriel
 DialogErrorMessage.32=Envoyer par courriel le rapport au support technique
 DialogVisibilityColumns.0=Affichage des colonnes
 DialogVisibilityColumns.1=Fermer
+DialogVisibilityColumns.2=Il doit y avoir au moins une colonne.
 JCalendar.0=Aujourd'hui
 JCalendar.1=Aucune
 JCalendar.2=Effacer la s\u00e9lection
