nouvelle version de antlr v4

--- a/dev/pom.xml
+++ b/dev/pom.xml
@@ -96,6 +96,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.synaptix</groupId>
+			<artifactId>workflow-manager-service</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.3.170</version>
