--- a/processManager/pom.xml
+++ b/processManager/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.synaptix</groupId>
     <artifactId>SynaptixLibs</artifactId>
-    <version>4.2.11-SNAPSHOT</version>
+    <version>4.2.11</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>processManager</artifactId>
