--- a/redpepper/redpepper-backend-automation/pom.xml
+++ b/redpepper/redpepper-backend-automation/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.synaptix.redpepper</groupId>
 		<artifactId>redpepper</artifactId>
-		<version>4.2.11-SNAPSHOT</version>
+		<version>4.2.11</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>redpepper-backend-automation</artifactId>
