--- a/server/SynaptixExtensionService/pom.xml
+++ b/server/SynaptixExtensionService/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.synaptix</groupId>
 		<artifactId>server</artifactId>
-		<version>4.2.11</version>
+		<version>4.2.12-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>SynaptixExtensionService</artifactId>
