--- a/workflow-manager/workflow-manager-server/pom.xml
+++ b/workflow-manager/workflow-manager-server/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>workflow-manager</artifactId>
 		<groupId>com.synaptix</groupId>
-		<version>4.2.11</version>
+		<version>4.2.12-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>com.synaptix</groupId>
 			<artifactId>SynaptixMyBatis</artifactId>
-			<version>4.2.11</version>
+			<version>4.2.12-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
