--- a/workflow-manager/workflow-manager-service/pom.xml
+++ b/workflow-manager/workflow-manager-service/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>workflow-manager</artifactId>
 		<groupId>com.synaptix</groupId>
-		<version>4.2.11</version>
+		<version>4.2.12-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
