--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,16 @@
 image: maven:3.3.3-jdk-8
-
 stages:
   - build
   - test
   - deploy
-
 build_job:
   stage: build
   only:
     - master
   script:
-    - mvn --batch-mode compile -Dmaven.test.skip=true -Djacoco.skip=true
-
+    - mvn --batch-mode compile -Dmaven.test.skip=true -Djacoco.skip=true -PCI
+  tags:
+    - docker
 build_merge_job:
   stage: build
   except:
@@ -19,8 +18,9 @@ build_merge_job:
     - tags
   script:
     - git merge origin master --no-commit --no-ff
-    - mvn --batch-mode compile -Dmaven.test.skip=true -Djacoco.skip=true
-
+    - mvn --batch-mode compile -Dmaven.test.skip=true -Djacoco.skip=true -PCI
+  tags:
+    - docker
 test_sonar_preview_job:
   stage: test
   except:
@@ -28,26 +28,31 @@ test_sonar_preview_job:
     - tags
   script:
     - git merge origin master --no-commit --no-ff
-    - mvn --batch-mode verify org.codehaus.mojo:sonar-maven-plugin:2.7.1:sonar -Dsonar.host.url=http://stx-th2-dev03.vlan-admin.private:9000 -Dsonar.login=gitlab-ci -Dsonar.password=gitlab-ci -Dsonar.analysis.mode=preview -Dsonar.issuesReport.console.enable=true -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref=$CI_BUILD_REF_NAME
-
+    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.host.url=http://stx-th2-dev03.vlan-admin.private:9000 -Dsonar.login=e84dbcbe350de817b4be51cbb821cba087acb04a -Dsonar.analysis.mode=preview -Dsonar.issuesReport.console.enable=true -Dsonar.gitlab.commit_sha=$CI_BUILD_REF -Dsonar.gitlab.ref=$CI_BUILD_REF_NAME -PCI
+  tags:
+    - docker
 test_sonar_job:
   stage: test
   only:
     - master
   script:
-    - mvn --batch-mode verify org.codehaus.mojo:sonar-maven-plugin:2.7.1:sonar -Dsonar.host.url=http://stx-th2-dev03.vlan-admin.private:9000 -Dsonar.login=gitlab-ci -Dsonar.password=gitlab-ci
-
+    - mvn --batch-mode verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.0.1:sonar -Dsonar.host.url=http://stx-th2-dev03.vlan-admin.private:9000 -Dsonar.login=e84dbcbe350de817b4be51cbb821cba087acb04a -PCI
+  tags:
+    - docker
 deploy_job:
   stage: deploy
   only:
     - master
   script:
-    - mvn --batch-mode deploy -Dmaven.test.skip=true -Djacoco.skip=true
-
+    - mvn --batch-mode deploy -Dmaven.test.skip=true -Djacoco.skip=true -PCI
+  tags:
+    - docker
 deploy_tags_job:
   stage: deploy
   only:
     - tags
   script:
     - mvn --batch-mode org.codehaus.mojo:versions-maven-plugin:2.1:set -DnewVersion=$CI_BUILD_REF_NAME -DgenerateBackupPoms=false
-    - mvn --batch-mode clean deploy -Dmaven.test.skip=true -Djacoco.skip=true
+    - mvn --batch-mode clean deploy -Dmaven.test.skip=true -Djacoco.skip=true -PCI
+  tags:
+    - docker
