evolution TLIPORTAIL-9184 [Saisie DDE] Dans le widget calendrier, remplacer le bouton "Aucune" par "Annuler"

--- a/client/SynaptixSwing/src/main/resources/com/synaptix/swing/swingMessages.properties
+++ b/client/SynaptixSwing/src/main/resources/com/synaptix/swing/swingMessages.properties
@@ -71,7 +71,7 @@ JDateHourTextField.11=Aucune
 JDateHourTextField.2=Afficher le calendrier
 JDateHourTextField.7=Heure
 JDateTextField.1=Afficher le calendrier
-JDateTextField.4=Aucune
+JDateTextField.4=Annuler
 JHourField.0=Heure : Minute
 JImageCropping.12=Aucune image
 JImageCropping.13=Recadrer...
